@@ -44,3 +44,4 @@
   10-Dec-2020    V0.51 Add to and from stash methods in UniProtIdMappingProvider()
   22-Mar-2020    V0.52 Add backup and restore methods in  UniProtIdMappingProvider()
   23-Mar-2020    V0.53 Add clearCache methods and preserve loaded state across multiple instances of UniProtIdMappingProvider()
+  10-May-2021    V0.54 Add feature and gene lookup method in UniProtUtils()
